<resources>
    <string name="app_name">Dog Walking App</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="home">Home</string>
    <string name="click_start_tracking_to_begin">Click\n \'Start Tracking\' to begin!</string>
    <string name="title_activity_stat_screen">StatScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change_email">Change Emal</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_walk_tracking">Welcome to Walk Tracking!</string>
    <string name="login">Login</string>
    <string name="new_user_click_here">New User? Click Here</string>
    <string name="select_start_date">Select Start Date:</string>
    <string name="select_end_date">Select End Date:</string>
    <string name="load_graph">Load Graph</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_goals_screen">GoalsScreen</string>
    <string name="welcome_to_walk_tracking_click_here_for_home_screen">Welcome to Walk Tracking! Click here for Home Screen</string>
    <string name="title_activity_database_screen">databaseScreen</string>
</resources>