<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".StatScreen">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@id/barChart"
        android:layout_width="368dp"
        android:layout_height="394dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick='onHome'
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="118dp"
        android:layout_marginStart="28dp"
        android:hint="@string/select_start_date"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChart"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="156dp"
        android:layout_height="115dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_end_date"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barChart"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/loadGraph"
        android:layout_width="136dp"
        android:layout_height="51dp"
        android:onClick="loadGraph"
        android:text="@string/load_graph"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.828" />



</androidx.constraintlayout.widget.ConstraintLayout>